--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,24 @@
 ---
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import Header from '../components/Header.astro';
+import Presentacion from '../components/Presentacion.astro';
+import Footer from '../components/Footer.astro';
+import Skills from '../components/Skills.astro';
+import Proyecto from '../components/Proyecto.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
+<Header/>
+
+
 <Layout>
 	<Welcome />
+	<Presentacion/>
+	<Skills/>
+	<Proyecto/>
 </Layout>
+
+<Footer/>
