--- a/src/components/Proyecto.astro
+++ b/src/components/Proyecto.astro
@@ -42,14 +42,14 @@ const skills=[
 
                     <div class="p-1 flex justify-around flex-wrap w-full gap-1">
 
-                        <a href="http://" target="_blank" rel="noopener noreferrer" class="bg-yellow-300 rounded-full flex justify-center items-center gap-2 text-white w-1/4 hover:shadow-2xl">
+                        <a href={proyecto.link} target="_blank" rel="noopener noreferrer" class="bg-yellow-300 rounded-full flex justify-center items-center gap-2 text-white w-1/4 hover:shadow-2xl">
                             
                             <i class="fa-solid fa-arrow-up-right-from-square text-xl"></i>
 
                             <span class="">Link</span>
                         </a>
 
-                        <a href="http://" target="_blank" rel="noopener noreferrer" class="bg-blue-950 rounded-full flex justify-between p-4 gap-2 text-white w-1/3">
+                        <a href={proyecto.repositorio} target="_blank" rel="noopener noreferrer" class="bg-blue-950 rounded-full flex justify-between p-4 gap-2 text-white w-1/3">
                             <i class="fa-brands fa-github text-xl"></i>
                             <span>Repositorio</span>
                         </a>
