--- a/src/components/Presentacion.astro
+++ b/src/components/Presentacion.astro
@@ -2,7 +2,11 @@
 import "../styles/global.css";
 ---
 
-<div class="bg-white block m-auto w-5/6 p-4">
+<div class="p-4" id="mi">
+
+</div>
+
+<div class="block m-auto w-5/6 p-4">
 
     <div class="flex justify-around flex-wrap gap-2">
 
@@ -17,13 +21,26 @@ import "../styles/global.css";
                 </p>
             </div>
 
+            <div class="flex justify-around gap-2 p-2">
+                <a href="https://github.com/GianPool7" target="_blank" rel="noopener noreferrer" class="bg-gray-300 w-full text-center rounded-2xl p-2 hover:shadow-blue-900 hover:shadow-md sm:w-1/6">
+                    <i class="fa-brands fa-github"></i>
+                    <span>GitHub</span>
+                </a>
+                <a href="/public/doc/Gian_Pool-Alvino_Cantaro-CV-2025.pdf" target="_blank" rel="noopener noreferrer" class="bg-gray-300 w-full text-center rounded-2xl p-2 hover:shadow-black hover:shadow-md sm:w-1/6">
+                    <i class="fa-regular fa-file"></i>
+                    <span>Cv</span>
+                </a>
+            </div>
+
         </div>
 
 
         <div class="flex justify-center p-4 w-full lg:w-2/5">
-            <img src="https://www.springboard.com/blog/wp-content/uploads/2022/06/coding-.png" alt="">
+            <img src="/public/presentacion/p.png" alt="">
         </div>
 
     </div>
 
 </div>
+
+<script src="/src/assets/js/modos.js"></script>
