--- a/src/components/Proyecto.astro
+++ b/src/components/Proyecto.astro
@@ -4,29 +4,32 @@ const proyectos=[
     {id:1,titulo:"Panel de control (Dashboard)",img:"https://gianpool7.github.io/img/Proyectos/p_dos.PNG",tech:["Php","Mysql","Html","Css","plantilla"],link:"",repositorio:""},
     {id:2,titulo:"Sitio Web de postulación",img:"https://gianpool7.github.io/img/Proyectos/p_uno.PNG",tech:["Php","Mysql","Html","Css","plantilla"],link:"",repositorio:"https://github.com/GianPool7/Sitio_Web_Postulaci-n-"},
     {id:3,titulo:"Pagina Web",img:"https://gianpool7.github.io/img/Proyectos/p_tres.PNG",tech:["Js","Html","Css"],link:"",repositorio:""},
-    {id:4,titulo:"Formulario Web - Reclamos",img:"https://gianpool7.github.io/img/Proyectos/p_tres.PNG",tech:["Js","Html","Css","Python"],link:"",repositorio:""},
-    {id:4,titulo:"Formulario Web - Reclamos",img:"https://gianpool7.github.io/img/Proyectos/p_tres.PNG",tech:["Js","Html","Css","Python"],link:"",repositorio:""},
-    {id:5,titulo:"Mi Portafolio Web",img:"https://gianpool7.github.io/img/Proyectos/p_tres.PNG",tech:["Astro","Html","Css","Js"],link:"https://gianpool7.github.io/Gpool7/",repositorio:"https://github.com/GianPool7/Gpool7"},
+    {id:4,titulo:"Formulario Web FiberPro - Reclamos",img:"/public/img/proyectos/FiberPro.png",tech:["Js","Html","Css","Python"],link:"",repositorio:""},
+    {id:4,titulo:"Formulario Web MaxPro - Reclamos",img:"/public/img/proyectos/MaxPro.png",tech:["Js","Html","Css","Python"],link:"",repositorio:""},
+    {id:5,titulo:"Mi Portafolio Web",img:"/public/img/proyectos/Portafolio.png",tech:["Astro","Html","Css","Js"],link:"https://gianpool7.github.io/Gpool7/",repositorio:"https://github.com/GianPool7/Gpool7"},
 ]
 
 ---
 
+<div class="p-2" id="proyectos">
+
+</div>
+
 <div class="block m-auto w-5/6">
 
-    <h1 class="text-center font-bold text-4xl p-2">Proyectos</h1>
+    <h1 class="text-center font-bold text-4xl p-4 mt-10 mb-10">Proyectos</h1>
 
     <div class="p-2 flex flex-wrap justify-evenly">
 
 
         {proyectos.map((proyecto,index) => (
             <div class="w-full lg:w-1/3 p-2" key={proyecto.id}> {/* 'key' para ayudar con la optimización del renderizado */}
-                <div>
-                    <img class="rounded-t-2xl" src={proyecto.img} alt="Imagen del proyecto" />
+                <div class="h-62">
+                    <img class="rounded-t-2xl bg-cover bg-center" src={proyecto.img} alt="Imagen del proyecto" />
                 </div>
 
-                <div class="bg-gray-400 p-4 rounded-b-2xl">
-                    <h1 class="font-bold text-2xl">{proyecto.titulo}</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, at.</p>
+                <div class="bg-white p-4 rounded-b-2xl shadow-xl">
+                    <h2 class="font-bold text-2xl">{proyecto.titulo}</h3>
 
                     <div class="p-4 flex justify-around flex-wrap">
                         {proyecto.tech.map((t,index)=>(
@@ -36,24 +39,24 @@ const proyectos=[
 
                     <div class="p-1 flex justify-around flex-wrap w-full gap-1">
 
-                        <a href={proyecto.link} target="_blank" rel="noopener noreferrer" class="bg-yellow-300 rounded-full flex justify-center items-center gap-2 text-white w-1/4 hover:shadow-2xl">
+                        <a href={proyecto.link} target="_blank" rel="noopener noreferrer" class="bg-yellow-300 rounded-full flex justify-center p-4 gap-2 text-white w-full sm:w-1/3 hover:shadow-2xl">
                             
                             <i class="fa-solid fa-arrow-up-right-from-square text-xl"></i>
 
                             <span class="">Link</span>
                         </a>
 
-                        <a href={proyecto.repositorio} target="_blank" rel="noopener noreferrer" class="bg-blue-950 rounded-full flex justify-between p-4 gap-2 text-white w-1/3">
+                        <a href={proyecto.repositorio} target="_blank" rel="noopener noreferrer" class="bg-blue-950 rounded-full flex justify-center p-4 gap-2 text-white w-full sm:w-1/3">
                             <i class="fa-brands fa-github text-xl"></i>
                             <span>Repositorio</span>
                         </a>
 
-                        <button class="bg-red-600 cursor-pointer rounded-full w-1/4 flex justify-between p-4 gap-2 text-white outline-none hover:shadow-2xl hover:bg-red-800" id={`mas-${index}`}>
+                        {/* <button class="bg-red-600 cursor-pointer rounded-full flex justify-center p-4 gap-2 text-white outline-none hover:shadow-2xl hover:bg-red-800 w-full sm:w-1/4" id={`mas-${index}`}>
                             <i class="fa-solid fa-circle-info text-xl"></i>
                             <span>Detalle</span>
-                        </button>
+                        </button> */}
 
-                        <dialog class="bg-purple-400 p-4 justify-center items-center fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 max-w-[90%] max-h-[80%] none" id="mostrar">
+                        <dialog class="none" id="mostrar">
                             <h2>{proyecto.titulo}</h2>
                             <h1>gola</h1>
                         </dialog>
@@ -69,4 +72,6 @@ const proyectos=[
 </div>
 
 
-<script src="/src/assets/js/script.js"></script>
+
+<script src="/src/assets/js/modos.js"></script>
+
