--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,16 +11,10 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
   />
   </head>
-  <body>
+  <body id="caja" class="flex flex-col gap-4">
     <slot />
   </body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+
+<script src="/src/assets/js/modos.js"></script>
