redirecciones a mi repo y todo esas cositas

--- a/src/components/Proyecto.astro
+++ b/src/components/Proyecto.astro
@@ -1,12 +1,12 @@
 ---
 
 const proyectos=[
-    {id:1,titulo:"Panel de control (Dashboard)",img:"https://gianpool7.github.io/img/Proyectos/p_dos.PNG",tech:["Php","Mysql","Html","Css","plantilla"],link:"",repositorio:""},
-    {id:2,titulo:"Sitio Web de postulación",img:"https://gianpool7.github.io/img/Proyectos/p_uno.PNG",tech:["Php","Mysql","Html","Css","plantilla"],link:"",repositorio:"https://github.com/GianPool7/Sitio_Web_Postulaci-n-"},
-    {id:3,titulo:"Pagina Web",img:"https://gianpool7.github.io/img/Proyectos/p_tres.PNG",tech:["Js","Html","Css"],link:"",repositorio:""},
-    {id:4,titulo:"Formulario Web FiberPro - Reclamos",img:"/public/img/proyectos/FiberPro.png",tech:["Js","Html","Css","Python"],link:"",repositorio:""},
-    {id:4,titulo:"Formulario Web MaxPro - Reclamos",img:"/public/img/proyectos/MaxPro.png",tech:["Js","Html","Css","Python"],link:"",repositorio:""},
-    {id:5,titulo:"Mi Portafolio Web",img:"/public/img/proyectos/Portafolio.png",tech:["Astro","Html","Css","Js"],link:"https://gianpool7.github.io/Gpool7/",repositorio:"https://github.com/GianPool7/Gpool7"},
+    // {id:1,titulo:"Panel de control (Dashboard)",img:"https://gianpool7.github.io/img/Proyectos/p_dos.PNG",tech:["Php","Mysql","Html","Css","plantilla"],link:"",repositorio:""},
+    // {id:2,titulo:"Sitio Web de postulación",img:"https://gianpool7.github.io/img/Proyectos/p_uno.PNG",tech:["Php","Mysql","Html","Css","plantilla"],link:"",repositorio:"https://github.com/GianPool7/Sitio_Web_Postulaci-n-"},
+    // {id:3,titulo:"Pagina Web",img:"https://gianpool7.github.io/img/Proyectos/p_tres.PNG",tech:["Js","Html","Css"],link:"",repositorio:""},
+    {id:4,titulo:"Formulario Web FiberPro - Reclamos",img:"/img/proyectos/FiberPro.png",tech:["Js","Html","Css","Python"],link:"https://fiberpro.com.pe/reclamos/",repositorio:"https://github.com/GianPool7/Formularios_Reclamo.git"},
+    {id:4,titulo:"Formulario Web MaxPro - Reclamos",img:"/img/proyectos/MaxPro.png",tech:["Js","Html","Css","Python"],link:"https://maxpro.com.pe/reclamos/",repositorio:"https://github.com/GianPool7/Formularios_Reclamo.git"},
+    {id:5,titulo:"Mi Portafolio Web",img:"/img/proyectos/Portafolio.png",tech:["Astro","Html","Css","Js"],link:"https://gianpool7.github.io/Gpool7/",repositorio:"https://github.com/GianPool7/Gpool7"},
 ]
 
 ---
