--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -3,20 +3,20 @@ import "../styles/global.css";
 
 
 const front=[
-    {id:1,nombre:"HTML",img:"/public/lenguajes/1.png"},
-    {id:2,nombre:"CSS",img:"/public/lenguajes/2.png"},
-    {id:3,nombre:"JS",img:"/public/lenguajes/3.png"},
-    {id:4,nombre:"Astro",img:"/public/lenguajes/4.png"},
+    {id:1,nombre:"HTML",img:"/lenguajes/1.png"},
+    {id:2,nombre:"CSS",img:"/lenguajes/2.png"},
+    {id:3,nombre:"JS",img:"/lenguajes/3.png"},
+    {id:4,nombre:"Astro",img:"/lenguajes/4.png"},
 ]
 
 const back=[
-    {id:1,nombre:"PHP",img:"/public/lenguajes/8.png"},
-    {id:2,nombre:"JAVA",img:"/public/lenguajes/5.png"},
+    {id:1,nombre:"PHP",img:"/lenguajes/8.png"},
+    {id:2,nombre:"JAVA",img:"/lenguajes/5.png"},
 ]
 
 const baseDatos=[
-    {id:1,nombre:"MYSQL",img:"/public/lenguajes/6.png"},
-    {id:2,nombre:"POSTGRES",img:"/public/lenguajes/7.png"},
+    {id:1,nombre:"MYSQL",img:"/lenguajes/6.png"},
+    {id:2,nombre:"POSTGRES",img:"/lenguajes/7.png"},
 ]
 
 ---
