--- a/src/components/Presentacion.astro
+++ b/src/components/Presentacion.astro
@@ -26,7 +26,7 @@ import "../styles/global.css";
                     <i class="fa-brands fa-github"></i>
                     <span>GitHub</span>
                 </a>
-                <a href="../public/doc/Gian_Pool-Alvino_Cantaro-CV-2025.pdf" target="_blank" rel="noopener noreferrer" class="bg-gray-300 w-full text-center rounded-2xl p-2 hover:shadow-black hover:shadow-md sm:w-1/6">
+                <a href="/doc/Gian_Pool-Alvino_Cantaro-CV-2025.pdf" target="_blank" rel="noopener noreferrer" class="bg-gray-300 w-full text-center rounded-2xl p-2 hover:shadow-black hover:shadow-md sm:w-1/6">
                     <i class="fa-regular fa-file"></i>
                     <span>Cv</span>
                 </a>
