--- a/src/components/Presentacion.astro
+++ b/src/components/Presentacion.astro
@@ -36,7 +36,7 @@ import "../styles/global.css";
 
 
         <div class="flex justify-center p-4 w-full lg:w-2/5">
-            <img src="/presentacion/p.png" alt="">
+            <img src="presentacion/p.png" alt="">
         </div>
 
     </div>
