redireccionando con el menu responsivo

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -38,9 +38,9 @@ import "../styles/global.css";
     <div class="p-2 hidden sticky bg-white shadow-lg top-0" id="contenedorMenuResponsivo">
 
         <nav class="flex flex-col items-center gap-4" id="menu">
-            <a href="" class="text-xl hover:border-solid hover:border-b-2">Sobre mi</a>
-            <a href="" class="text-xl">Skill</a>
-            <a href="" class="text-xl">Proyectos</a>
+            <a href="#mi" class="text-xl">Sobre mi</a>
+            <a href="#skill" class="text-xl">Skill</a>
+            <a href="#proyectos" class="text-xl">Proyectos</a>
         </nav>
 
     </div>
