limpiando la consola 2

--- a/src/components/Presentacion.astro
+++ b/src/components/Presentacion.astro
@@ -43,4 +43,4 @@ import "../styles/global.css";
 
 </div>
 
-<script src="/src/assets/js/modos.js"></script>
+<!-- <script src="/src/assets/js/modos.js"></script> -->
