--- a/src/components/Proyecto.astro
+++ b/src/components/Proyecto.astro
@@ -56,10 +56,10 @@ const proyectos=[
                             <span>Detalle</span>
                         </button> */}
 
-                        <dialog class="none" id="mostrar">
+                        {/* <dialog class="none" id="mostrar">
                             <h2>{proyecto.titulo}</h2>
                             <h1>gola</h1>
-                        </dialog>
+                        </dialog> */}
                     </div>
 
                 </div>
